--- a/myCss.css
+++ b/myCss.css
@@ -118,8 +118,26 @@ img.gear{
 	width:20px;
 	height:20px;
 	z-index:10;
-	margin-left:1%;
+	position:absolute;
+	right:2px;
+
 }
 
+button.menu-item{
+
+	background-color:rgb(54, 162, 250);
+	color:white;
+	border:none;
+	width:30vw;
+	display:block;
+	font-size:15px;
+	padding-top:1%;
+	text-align:left;
+	font-weight:100;
+	padding-bottom:1%;
+	margin-right:1%;
+	
+
+}
 
 
